* What is new in gsl-1.2:

** The declarations used to export static objects can now be
controlled through a macro GSL_VAR and the header file
<gsl/gsl_types.h>.

** The simulated annealing routine gsl_siman_solve now keeps track of
the best solution so far.

** The values of the physical constants have been updated to the
CODATA 1998 recommendations.

** The domain of gsl_sf_psi_1piy has been extended to negative y.

** Fixed memory leak in the Chebyshev module.

** The seeding procedure of mt19937 has been updated to the latest
version from Makoto Matsumoto and Takuji Nishimura. The original
seeding procedure is available through the generator
gsl_rng_mt19937_1999.

** New multiroot functions now allow access to the current values of f
and dx.

** Removed unnecessary endpoint subtraction in chebyshev-based
QUADPACK routines to avoid possible loss of precision.

** The default error handler now outputs a explanatory message before
aborting.

** Fixed bug in gsl_interp_cspline_periodic which caused a
discontinuity in the derivative near the boundary.

** A new random number generator gsl_rng_taus2 has been added to
correct flaws in the seeding procedure of gsl_rng_taus, as described
in an erratum to the original paper of P. L'Ecuyer.

** The KNOWN-PROBLEMS file of "make check" failures has been replaced
by a BUGS file, since we now require "make check" to work correctly
for stable releases.

** Added missing quasi-random number generator function gsl_qrng_init.

** Added nonsymmetric tridiagonal solvers gsl_linalg_solve_tridiag and
gsl_linalg_solve_cyc_tridiag.

** Added missing declaration for the generator gsl_rng_mt_19937_1998.

** Fixed a bug in gsl_linalg_solv_symm_cyc_tridiag which caused it to
produce incorrect results.

** The function gsl_min_fminimizer_minimum has been renamed to
gsl_min_fminimizer_x_minimum for consistency (the old function name is
still available but is deprecated).  Additional functions have been