@@ -1,3 +1,13 @@
+Sun Jun 16 11:57:00 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* svd.c (gsl_linalg_SV_decomp): keep track of maximum value
+ 	correctly when sorting singular values
+
+	* test.c (test_SV_decomp): add 3x3 of SVD
+
+	* svdstep.c (chase_out_intermediate_zero): handle case of dk=0
+	(chase_out_trailing_zero): handle case of dn=0
+
 Wed Apr 17 20:04:11 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* tridiag.c (gsl_linalg_solve_tridiag):
